--- a/app/views/searches/search.html.erb
+++ b/app/views/searches/search.html.erb
@@ -14,6 +14,8 @@
         <%= venue["name"] %><br>
         <%= venue["location"]["address"] %><br>
         Checkins: <%= venue["stats"]["checkinsCount"] %><br>
+        <%= form_tag '/tips' do %>
+        <%= hidden_field_tag :venue_id, venue["id"] %>
       </li>
     <% end %>
     </ul>
